--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-table": "^8.16.0",
     "@theme-toggles/react": "^4.1.0",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
